services/common/testdata/labels.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: php-dbconnect
  labels:
    heptio.com/example: 片仮名
    blah$: lamp
spec:
  selector:
    matchLabels:
      app: php-dbconnect
  template:
    metadata:
      labels:
        blah$: lamp$
        köhler.com/foo: bar
    spec:
      containers:
      - image: heptio/example-php-dbconnect
        imagePullPolicy: Always
        name: php-dbconnect
