services/common/testdata/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-external-access
spec:
  podSelector:
    matchLabels:
      run: nginx
  ingress:
  - {}
  policyTypes:
  - Ingress
