services/common/testdata/validHostport.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: "mqttserver-deployment"
spec:
  replicas: 1
  template:
    metadata:
      name: mqttserver
      labels:
        app: mqttserver
    spec:
      containers:
      - name: mqttserver
        imagePullPolicy: IfNotPresent
        image: 770301640873.dkr.ecr.us-west-2.amazonaws.com/edgecomputing/mqttserver:72
        volumeMounts:
        - name: brokercerts
          mountPath: "/mosquitto/certs"
          readOnly: true
        env:
        - name: MQTT_CONNECTION_TYPE
          valueFrom:
            configMapKeyRef:
              name: edgemgmt-cm
              key: edge.mqttconnectiontype
        ports:
        - containerPort: 1883
          hostPort: 82
        command:
        - sh
        - -c
        - "exec /usr/sbin/mosquitto -c /mosquitto/config/mosquitto_$MQTT_CONNECTION_TYPE.conf"
